--- a/views/adminViewDoctor.ejs
+++ b/views/adminViewDoctor.ejs
@@ -238,12 +238,10 @@
               <option value="Verified">Verified</option>
             </select>
             <div id="additionalFields" style="display: none;">
-              <label for="trialPeriod">Trial Period (in days):</label>
-              <input type="number" id="trialPeriod" name="trialPeriod" value="60" min="1">
-              
-              <label for="maxTimeSlots">Max Time Slots:</label>
-              <input type="number" id="maxTimeSlots" name="maxTimeSlots" value="3" min="0">
+              <label for="commissionFee">Commission Fee (%):</label>
+              <input type="number" id="commissionFee" name="commissionFee" value="10" min="0" required>
             </div>
+            
             <div id="reasonField" style="display: none;">
               <label for="reason">Reason for Rejection:</label>
               <textarea id="reason" name="reason" rows="4" placeholder="Enter the reason here"></textarea>
@@ -389,12 +387,15 @@
   <script>
 
 function toggleAdditionalFields() {
-    const status = document.getElementById('verificationStatus').value;
-    const additionalFields = document.getElementById('additionalFields');
-    const reasonField = document.getElementById('reasonField');
-    additionalFields.style.display = (status === 'Verified') ? 'block' : 'none';
-    reasonField.style.display = (status === 'Not Verified') ? 'block' : 'none';
-  }
+  const status = document.getElementById('verificationStatus').value;
+  const additionalFields = document.getElementById('additionalFields');
+  const reasonField = document.getElementById('reasonField');
+  
+  additionalFields.style.display = (status === 'Verified') ? 'block' : 'none';
+  
+  reasonField.style.display = (status === 'Not Verified') ? 'block' : 'none';
+}
+
 
 
     function viewProof(type) {
